--- a/process_file/subject.css
+++ b/process_file/subject.css
@@ -1,4 +1,5 @@
 body{
+    background-color: rgba(0,0,0,1);
     margin:0;
     padding:0;
     box-sizing: border-box;
@@ -54,3 +55,47 @@ a{
     color: red;
     font-size: 20px;
 }
+
+
+
+
+/* folder */
+
+ 
+
+.file{
+    /* background-color: green; */
+    width: fit-content;
+}
+
+
+ 
+ .file::before {
+     content:"";
+     position: absolute;
+     width: 290px;;
+     height: 320px;;
+     background:#16A085;
+     position: absolute;
+     left:1%;
+     top: 200px;
+     border-radius: 6px;
+     z-index: 5;
+     box-shadow: 3px -3px 5px rgba(0,0,0,0.5);
+ }
+ 
+ .file::after {
+     content:"";
+     position: absolute;
+     width:120px;
+     height:40px;
+     background: #1E824C;
+     position: absolute;
+     top:190px;
+     left:1%;
+     z-index:-1;
+     border-top-left-radius: 6px;
+     border-top-right-radius: 6px;
+ }
+
+ 
