--- a/process_file/Question-upload.css
+++ b/process_file/Question-upload.css
@@ -1,1 +1,165 @@
+body {
+  margin: 0%;
+  padding: 0%;
+  box-shadow: none;
+  background-image: url("Green-india.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
 
+nav {
+  color: black;
+}
+
+.navbar ul li {
+  list-style: none;
+  display: inline-block;
+  margin: 0px 20px 0 20px;
+  font-size: 30px;
+}
+.navbar ul li a:hover {
+  /* background-color: rgba(0, 0, 0, 0.6); */
+  color: seashell;
+}
+
+h1 {
+  color: red;
+}
+
+textarea {
+  border-radius: 10px !important;
+  width: 100%;
+  height: 10vh;
+}
+
+form {
+  padding: 30px;
+}
+label {
+  font-size: 30px;
+}
+
+input {
+  border-radius: 8px !important;
+}
+
+.Question {
+  /* border: 2px solid gray; */
+  border-radius: 10px;
+  padding: 30px;
+}
+
+.Question ul li {
+  list-style: none;
+}
+
+
+
+
+/* popup button */
+
+
+
+button {
+  width: 200px;
+}
+
+.button {
+  font-size: 1em;
+  padding: 10px;
+  color: #111111;
+  border: 2px solid #06d85f;
+  border-radius: 20px/50px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+}
+.button:hover {
+  background: black;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  /* background: rgba(0, 0, 0, 0.7); */
+  transition: opacity 500ms;
+  visibility: hidden;
+  opacity: 0;
+}
+.overlay:target {
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup {
+  padding: 20px;
+  background: #fff;
+  border-radius: 5px;
+  position: relative;
+  transition: all 5s ease-in-out;
+}
+
+.popup .close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  transition: all 200ms;
+  font-size: 30px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #191919;
+}
+.popup .close:hover {
+  color: #06d85f;
+}
+
+.popup .content {
+  max-height: 30%;
+  overflow: auto;
+}
+
+@media screen and (max-width: 700px) {
+  .box {
+    width: 70%;
+  }
+  .popup {
+    width: 70%;
+  }
+}
+
+.con {
+  display: flex;
+  justify-content: center;
+  /* display: none; */
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th {
+  border: 1px solid #dddddd;
+  text-align: center;
+  padding: 8px;
+  width: 200px;
+}
+
+/* th:nth-child(6){
+              
+          
+          } */
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
