few things get update

--- a/process_file/index1.css
+++ b/process_file/index1.css
@@ -8,7 +8,7 @@
 
 body{
     overflow: hidden;
-    background-image: url(backdrop.png);
+    background-image: url(./Assets/backdrop.png);
     background-size: cover;
     background-position: fixed;
     min-height: 100vh;
