--- a/process_file/Question-paper..css
+++ b/process_file/Question-paper..css
@@ -2,12 +2,15 @@
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
-    cursor: none;
+    /* cursor: none; */
 }
 
 
 body{
     height:100vh;
+    background-color: #FAACA8;
+    background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
+
 }
 a{
     text-decoration: none;
@@ -15,10 +18,16 @@ a{
 }
 
 nav{
-    background-image: url(backkk.jpg);
+
+    background-color: rgba(0, 0, 0,0.6);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    border-radius: 20px;
+    margin: 1rem;
+    width: 98%;
+    position: fixed;
+    top: 0%;
 }
 
 
@@ -29,9 +38,7 @@ nav{
     font-size: 30px;
 }
 .navbar ul li a:hover{
-    /* background-color: rgba(0, 0, 0, 0.6); */
     color: seashell;
-    
 }
 
 
@@ -40,15 +47,16 @@ nav{
 {
     display: flex;
     padding: 20px;
-    height:80vh;
+    height:100%;
+    margin-top: 6rem;
 }
 
 
 .question-box{
-    border: 2px solid green;
+    border: 2px solid rgb(3, 167, 3);
     border-radius: 8px;
-    height: 300px;
-    
+    height: 250px;
+    margin: 1rem;
 }
 
 .question-box > p{
@@ -60,7 +68,7 @@ nav{
 }
 
 
-.proter-region
+.proctor-region
 {
     height: 100%;
     background-color:#FED2AA;
